Made changes in read me
