# public/swagger/openapi.json
@@ -1,5 +1,10 @@
 {
     "openapi": "3.0.0",
+    "info": {
+        "title": "Slim Task Manager API",
+        "description": "Swagger documentation for the Slim Task Manager project",
+        "version": "1.0.0"
+    },
     "paths": {
         "/tasks": {
             "get": {
@@ -79,7 +84,12 @@
                     "422": {
                         "description": "Validation errors"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ]
             }
         },
         "/tasks/{id}": {
@@ -114,7 +124,12 @@
                     "404": {
                         "description": "Task not found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -174,7 +189,12 @@
                     "404": {
                         "description": "Task not found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -200,7 +220,12 @@
                     "404": {
                         "description": "Task not found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ]
             }
         }
     },
@@ -229,6 +254,13 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "ApiKeyAuth": {
+                "type": "apiKey",
+                "name": "x-api-key",
+                "in": "header"
             }
         }
     },
